--- a/src/tpl/Galerie.twig
+++ b/src/tpl/Galerie.twig
@@ -7,13 +7,15 @@
         img: "crossroad-gallery/galerie1.webp",
         alt: "fotografie z festivalu, ročníku 2021",
         title: "Ročník 2021",
-        link: "/gallery/galerie-2021.html",
+        link: "https://provasodnas.rajce.idnes.cz/Dozvuky_leta_2021/",
+        blank: true
     },
     {
-        img: "crossroad-gallery/galerie2.webp",
+        img: "crossroad-gallery/galerie5.webp",
         alt: "fotografie z festivalu, ročníku 2022",
         title: "Ročník 2022",
-        link: "/gallery/galerie-2022.html",
+        link: "https://martinsevera.pic-time.com/-newgallery2/gallery",
+        blank: true,
     },
 ]%}
 
