--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -4,40 +4,82 @@
 
 {% set crossroads = [
     {
-        img: "crossroad-bands/band2.webp",
-        alt: "fotografie kapely 375 m.n.m",
-        title: "375 m.n.m",
+        img: "bands/01_Strasni banani.jpg",
+        alt: "Strašný Banáni",
+        title: "Strašný Banáni",
+        link: "/kapely/strasnybanani.html",
+    },
+    {
+        img: "bands/02_INST60.jpg",
+        alt: "INST60",
+        title: "INST60",
+        link: "/kapely/inst60.html",
+    },
+    {
+        img: "bands/03_Jamaron.jpg",
+        alt: "Jamaron",
+        title: "Jamaron",
+        link: "/kapely/jamaron.html",
+    },
+    {
+        img: "bands/04_Paulie Garand.jpeg",
+        alt: "Paulie Garand",
+        title: "Paulie Garand",
+        link: "/kapely/pauliegarand.html",
+    },
+    {
+        img: "bands/05_Doga.jpg",
+        alt: "Doga",
+        title: "Doga",
+        link: "/kapely/doga.html",
+    },
+    {
+        img: "bands/06_375mnm.jpeg",
+        alt: "375 metrů nad mořem",
+        title: "375 metrů nad mořem",
         link: "/kapely/375mnm.html",
     },
     {
-        img: "crossroad-bands/band1.webp",
-        alt: "fotografie z festivalu, ročníku 2022",
-        title: "Sum 41",
-        link: "#",
+        img: "bands/07_TheExcited.jpeg",
+        alt: "The Excited",
+        title: "The Excited",
+        link: "/kapely/theexcited.html",
     },
     {
-        img: "crossroad-bands/band1.webp",
-        alt: "fotografie z festivalu, ročníku 2022",
-        title: "Arctic Monkeys",
-        link: "#",
+        img: "bands/08_SafariExpres.jpeg",
+        alt: "Safari Expres",
+        title: "Safari Expres",
+        link: "/kapely/safariexpres.html",
     },
     {
-        img: "crossroad-bands/band1.webp",
-        alt: "fotografie z festivalu, ročníku 2022",
-        title: "The Offspring",
-        link: "#",
+        img: "bands/09_AjBrix_AstroBoy.jpeg",
+        alt: "AJ Brix & Astro Boy",
+        title: "AJ Brix & Astro Boy",
+        link: "/kapely/ajbrix&astroboy.html",
     },
     {
-        img: "crossroad-bands/band1.webp",
-        alt: "fotografie z festivalu, ročníku 2022",
-        title: "Green Day",
-        link: "#",
+        img: "bands/10_MIchalHruza.jpg",
+        alt: "Michal Hrůza & kapela Hrůzy",
+        title: "Michal Hrůza & kapela Hrůzy",
+        link: "/kapely/michalhruza.html",
     },
     {
-        img: "crossroad-bands/band1.webp",
-        alt: "fotografie z festivalu, ročníku 2022",
-        title: "Blink 182",
-        link: "#",
+        img: "bands/11_TheAttics.jpg",
+        alt: "The Attics",
+        title: "The Attics",
+        link: "/kapely/theattics.html",
+    },
+    {
+        img: "bands/12_Marpo.jpeg",
+        alt: "Marpo & kapela TroubleGang",
+        title: "Marpo & kapela TroubleGang",
+        link: "/kapely/marpo.html",
+    },
+    {
+        img: "bands/13_HusýKrk.jpg",
+        alt: "Husý krk",
+        title: "Husý krk",
+        link: "/kapely/husykrk.html",
     },
 ]%}
 
