--- a/src/tpl/Views/Gallery/Galerie-2021.twig
+++ b/src/tpl/Views/Gallery/Galerie-2021.twig
@@ -1,4 +1,4 @@
-{% extends '@layout/layout.twig' %}
+{# {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - Galerie 2022' %}
 {% set description = 'V galerii stránky dozvuků léta naleznete fotografie z předešlých ročníků festivalu.' %}
 
@@ -194,4 +194,4 @@
     </section>
 </main>
 
-{% endblock %}
+{% endblock %} #}
