--- a/src/tpl/Views/Kapely/375mnm.twig
+++ b/src/tpl/Views/Kapely/375mnm.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
-{% set pageTitle = 'Dozvuky léta - Arctic Monkeys' %}
-{% set description = 'Arctic monkeys je rocková kapela, která bude účinkovat na festivalu dozvuky léta 1.9.2023.' %}
+{% set pageTitle = 'Dozvuky léta - 375 metrů nad mořem' %}
+{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela 375 metrů nad mořem' %}
 
 {% block content %}
 
@@ -14,7 +14,7 @@
                         url: "/kapely.html",
                     },
                     {
-                        link: "375mnm",
+                        link: "375 metrů nad mořem",
                     }
                 ]
             }} %}
@@ -23,16 +23,16 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "main-image/galerie2.webp",
-                alt: "kapela 375 m.n.m",
-                title: "375 m.n.m",
+                img: "bands/06_375mnm.jpeg",
+                alt: "375 metrů nad mořem",
+                title: "375 metrů nad mořem",
             }} %}
         </div>
     </section>
     <section class="section section--top">
         <div class="container">
             {% include "@components/core/title/title.twig" with { props: {
-                title: "Českotřebovská kapela 375 m.n.m",
+                title: "375 metrů nad mořem",
                 tag: "h2",
             }} %}
         </div>
@@ -42,36 +42,29 @@
             <div class="blog">
                 <div class="blog__text">
                     <h4>Úvod o kapele</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime tempore totam aspernatur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam, quis similique non iste et minima nisi amet est modi voluptates asperiores corrupti quia doloremque velit deserunt fuga! Harum, ut expedita. Quia reprehenderit aliquam ea nulla iste nostrum harum aut expedita! Et unde nihil ea, voluptates dolorem nisi recusandae molestias, eligendi quidem dolores nostrum, quis blanditiis! Officia cumque excepturi necessitatibus impedit debitis, quam a rem! Consectetur nam sequi sapiente placeat, aliquid ex dolore incidunt, tempore aspernatur quas ullam aliquam soluta assumenda id reprehenderit necessitatibus magnam modi corporis deserunt! Nihil, architecto, omnis explicabo id alias facere molestiae enim, perspiciatis eligendi hic ab! ipsum voluptas quaerat nam sunt quibusdam aliquid at eligendi iure, nemo quidem laboriosam excepturi veritatis cum officia possimus illo numquam ea debitis deserunt atque. Veritatis dolor commodi fuga!</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et incidunt tempore accusamus vel minima doloremque voluptatibus libero praesentium asperiores ut.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos mollitia, dolores, eligendi quibusdam quisquam aspernatur nisi expedita omnis non quod iusto beatae? Ab commodi incidunt totam maxime ad ea accusamus?</p>
-                    <h4>Působení</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime tempore totam aspernatur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam, quis similique non iste et minima nisi amet est modi voluptates asperiores corrupti quia doloremque velit deserunt fuga! Harum, ut expedita. Quia reprehenderit aliquam ea nulla iste nostrum harum aut expedita! Et unde nihil ea, voluptates dolorem nisi recusandae molestias, eligendi quidem dolores nostrum, quis blanditiis! Officia cumque excepturi necessitatibus impedit debitis, quam a rem! Consectetur nam sequi sapiente placeat, aliquid ex dolore incidunt, tempore aspernatur quas ullam aliquam soluta assumenda id reprehenderit necessitatibus magnam modi corporis deserunt! Nihil, architecto, omnis explicabo id alias facere molestiae enim, perspiciatis eligendi hic ab! ipsum voluptas quaerat nam sunt quibusdam aliquid at eligendi iure, nemo quidem laboriosam excepturi veritatis cum officia possimus illo numquam ea debitis deserunt atque. Veritatis dolor commodi fuga!</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et incidunt tempore accusamus vel minima doloremque voluptatibus libero praesentium asperiores ut.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos mollitia, dolores, eligendi quibusdam quisquam aspernatur nisi expedita omnis non quod iusto beatae? Ab commodi incidunt totam maxime ad ea accusamus?</p>
-                    <div class="blog__audio-section">
+                    <p>Poslední kapelou, která se představí v rámci prvního dne programu Dozvuků léta bude opět 375 metrů nad mořem. Jedná se o zábavovou, plesovou i svatební kapelu z České Třebové, ve složení Daniela Stránská, Natálie Burešová, Dominik Stránský, Tomáš Kupka a Jan Růžička. Kapela hraje covery i vlastní tvorbu.</p>
+                    {# <div class="blog__audio-section">
                         <h4>Ukázka z tvorby:</h4>
                         {% include "@components/box/audio/audio.twig" with { props: { 
                             src: "https://audio.jukehost.co.uk/9enxXQaZQ4OAmD1FSxbyh4o17WdoNYX4",
                             name: "Název písničky"
                         }}%}                      
-                    </div>
+                    </div> #}
                     {# <div class="blog__audio-section u-pt-20">
                         <h4>Ukázka z tvorby v2:</h4>
                         <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1452190555&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/h-ctor-guitarrista" title="Héctor Guitarrista 8" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/h-ctor-guitarrista/over-my-head" title="Over My Head - Sum 41 | Cover by Héctor Oliva" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
                     </div> #}
-                    <h4>Video ukázka:</h4>
+                    {# <h4>Video ukázka:</h4>
                     <div class="blog__video-section">
                         {% include "@components/box/video/video.twig" with { props: { 
                             link: "https://www.youtube.com/embed/_4C7Zr0qL8s" 
                         }}%}
-                    </div>
+                    </div> #}
                 </div>
                 <div class="blog__social">
                     <span>Sociální sítě:</span>
                     <a target="_blank" href="https://www.facebook.com/375mnm" class="blog__social-item">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "fb" }} %}</ab>
                     <a target="_blank" href="https://www.instagram.com/375_m.n.m/" class="blog__social-item">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "instagram" }} %}</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=_4C7Zr0qL8s&ab_channel=TheAttics" class="blog__social-item">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "yt" }} %}</a>
                 </div>
             </div>
         </div>
