--- a/src/tpl/components/core/footer/footer.twig
+++ b/src/tpl/components/core/footer/footer.twig
@@ -5,33 +5,52 @@
                 title: "Kontakty",
                 tag: "h3",
             }} %}
-            <div class="grid grid--center">
+            <div class="grid">
                 <div class="grid__col col-3-12@md">
                     <div class="footer__contact">
-                        <h4>Spolek Pro Vás od Nás:</h4>
+                        <h4>Konatktní e-mail:</h4>
                         <ul>
-                            <li>tel: <a href="tel:+420 123 456 789">+420 123 456 789</a></li>
-                            <li>mail: <a href="mailto:provasodnas@domena.cz">provasodnas@domena.cz</a></li>
+                            <li>mail: <a href="mailto:odnasprovas.zs@gmail.com">odnasprovas.zs@gmail.com</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="grid__col col-3-12@md">
                     <div class="footer__contact">
-                        <h4>Pořadatelé:</h4>
+                        <h4>Management:</h4>
                         <span>Tomáš Kupka:</span>
                         <ul>
-                            <li>tel: <a href="tel:+420 123 456 789">+420 123 456 789</a></li>
-                            <li>mail: <a href="mailto:email@domena.cz">tomas.kupka@domena.cz</a></li>
+                            <li>tel: <a href="tel:+420 732 583 521">+420 732 583 521</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="grid__col col-3-12@md">
                     <div class="footer__contact">
-                        <h4>Kapely a stánkový provoz:</h4>
-                        <span>Tomáš Kupka:</span>
+                        <h4>Booking kapel:</h4>
+                        <span>Jan Růžička:</span>
                         <ul>
-                            <li>tel: <a href="tel:+420 123 456 789">+420 123 456 789</a></li>
-                            <li>mail: <a href="mailto:email@domena.cz">tomas.kupka@domena.cz</a></li>
+                            <li>tel: <a href="tel:+420 606 065 201">+420 606 065 201</a></li>
+                        </ul>
+                        <span>Daniela Stránská:</span>
+                        <ul>
+                            <li>tel: <a href="tel:+420 603 435 773">+420 603 435 773</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="grid__col col-3-12@md">
+                    <div class="footer__contact">
+                        <h4>Stánkový prodej a brigádníci:</h4>
+                        <span>Natálie Foldynová:</span>
+                        <ul>
+                            <li>tel: <a href="tel:+420 734 585 744">+420 734 585 744</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="grid__col col-3-12@md">
+                    <div class="footer__contact">
+                        <h4>Marketing:</h4>
+                        <span>Jiří Holý:</span>
+                        <ul>
+                            <li>tel: <a href="tel:+420 605 336 208">+420 605 336 208</a></li>
                         </ul>
                     </div>
                 </div>
@@ -42,22 +61,25 @@
                 <div class="grid__col col-4-12@md">
                     <div class="footer__logo footer__logo--left">
                         {% include "@components/core/image/image.twig" with { item: {
-                            img: "logo.png"
+                            img: "logo-test.png"
                         }} %}
                     </div>
                 </div>
                 <div class="grid__col col-4-12@md">
                     <h4 class="u-text-center">Sledujte nás na sociálních sítích:</h4>
                     <div class="footer__socials">
-                        <a target="_blank" href="https://www.facebook.com/provasodnas" class="footer__social-link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "fb" }} %}</a>
+                        <a target="_blank" href="https://www.facebook.com/events/268257195760378/ " class="footer__social-link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "fb" }} %}</a>
                         <a target="_blank" href="https://www.instagram.com/dozvuky_leta/" class="footer__social-link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "instagram" }} %}</a>
-                        <a target="_blank" href="#" class="footer__social-link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "twitter" }} %}</a>
+                    </div>
+                    <h4 class="u-text-center">Kupujte lístky:</h4>
+                    <div class="footer__socials">
+                        <a target="_blank" href="https://www.ticketportal.cz/event/DOZVUKY-LETA-2023?IDPartner=338#fullscreen-search" class="footer__social-link footer__social-link--ticket">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "ticket" }} %}</a>
                     </div>
                 </div>
                 <div class="grid__col col-4-12@md">
                     <div class="footer__logo">
                         {% include "@components/core/image/image.twig" with { item: {
-                            img: "logo-test.png"
+                            img: "provasodnas-01.png"
                         }} %}
                     </div>
                 </div>
@@ -65,35 +87,21 @@
 
         </div>
         {% include "@components/core/title/title.twig" with { props: {
-            title: "Sponzoři",
+            title: "Partneři",
             tag: "h3",
         }} %}
         <div class="footer__sponsors">
             <div class="footer__sponsor-item">
                 <div class="footer__sponsor-image">
                     {% include "@components/core/image/image.twig" with { item: {
-                        img: "sponsors/pardubice.png"
+                        img: "sponsors/LOGO_CeskaTrebova-01.png"
                     }} %}
                 </div>
             </div>
             <div class="footer__sponsor-item">
                 <div class="footer__sponsor-image">
                     {% include "@components/core/image/image.twig" with { item: {
-                        img: "sponsors/techplast.png"
-                    }} %}
-                </div>
-            </div>
-            <div class="footer__sponsor-item">
-                <div class="footer__sponsor-image">
-                    {% include "@components/core/image/image.twig" with { item: {
-                        img: "sponsors/znak.png"
-                    }} %}
-                </div>
-            </div>
-            <div class="footer__sponsor-item">
-                <div class="footer__sponsor-image">
-                    {% include "@components/core/image/image.twig" with { item: {
-                        img: "sponsors/znak2.png"
+                        img: "sponsors/LOGO_PardubickyKraj-01.png"
                     }} %}
                 </div>
             </div>
