--- a/src/tpl/layout/layout.twig
+++ b/src/tpl/layout/layout.twig
@@ -43,14 +43,12 @@
 		<link rel="preload" as="script" href="{{script}}">
 		{% endfor %} #}
 
-		<link rel="apple-touch-icon" sizes="180x180" href="{{ assets.images }}favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="{{ assets.images }}favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="{{ assets.images }}favicon/favicon-16x16.png">
-		{# <link rel="manifest" href="{{ assets.images }}favicon/site.webmanifest"> #}
-		<link rel="mask-icon" href="{{ assets.images }}favicon/safari-pinned-tab.svg" color="#003cdb">
-		<link rel="shortcut icon" href="{{ assets.images }}favicon/favicon.ico">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-config" content="{{ assets.images }}favicon/browserconfig.xml">
+		<link rel="apple-touch-icon" sizes="180x180" href="/dist/assets/img/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/dist/assets/img/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/dist/assets/img/favicon/favicon-16x16.png">
+		<link rel="manifest" href="/dist/assets/img/favicon/site.webmanifest">
+		<link rel="mask-icon" href="/dist/assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
 
 <!-- 		<link rel="shortcut icon" href="{{ assets.images }}favicon.ico"> -->
