favicon setting, textation changes

--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -233,7 +233,7 @@
         <section class="section section--bg section--bottom">
             <div class="container">
                 <div class="text-block u-text-center">
-                    <h2>Festival plný zážitků...</h2>
+                    <h2>Festival nabitý zážitky...</h2>
                     <h4>Mrkni na minulé ročníky!</h4>
                     <a target="_blank" href="/galerie.html" class="btn-glitch" role="button"><span class="btn-glitch__text">Galerie</span></a>
                 </div>
