missing textation fix

--- a/src/tpl/Views/Kapely/375mnm.twig
+++ b/src/tpl/Views/Kapely/375mnm.twig
@@ -43,6 +43,7 @@
                 <div class="blog__text">
                     <h4>Úvod o kapele</h4>
                     <p>Poslední kapelou, která se představí v rámci prvního dne programu Dozvuků léta bude opět 375 metrů nad mořem. Jedná se o zábavovou, plesovou i svatební kapelu z České Třebové, ve složení Daniela Stránská, Natálie Burešová, Dominik Stránský, Tomáš Kupka a Jan Růžička. Kapela hraje covery i vlastní tvorbu.</p>
+                    <p>Čas vystoupení: Pátek 1. 9. od 00:00</p>
                     {# <div class="blog__audio-section">
                         <h4>Ukázka z tvorby:</h4>
                         {% include "@components/box/audio/audio.twig" with { props: { 
