htaccess update, removed .html extensions

--- a/src/tpl/Views/Gallery/Galerie-2021.twig
+++ b/src/tpl/Views/Gallery/Galerie-2021.twig
@@ -166,7 +166,7 @@
                 items: [
                     {
                         link: "galerie",
-                        url: "/galerie.html",
+                        url: "/galerie",
                     },
                     {
                         link: "ročník-2021",
