--- a/src/tpl/Views/Kapely/theattics.twig
+++ b/src/tpl/Views/Kapely/theattics.twig
@@ -11,7 +11,7 @@
                 items: [
                     {
                         link: "kapely",
-                        url: "/kapely.html",
+                        url: "/kapely",
                     },
                     {
                         link: "The Attics",
