--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -55,91 +55,91 @@
                         img: "bands/12_Marpo.jpeg",
                         alt: "Marpo & kapela TroubleGang",
                         title: "Marpo & kapela TroubleGang",
-                        link: "/kapely/marpo.html",
+                        link: "/kapely/marpo",
                         description: "Marpo, vlastním jménem Otakar Petřina, se věnuje muzice už od dětství, kdy si koupil mikrofon a svoji tvorbu zaznamenával na magnetofon. Postupně nahrával svá alba s různými interprety, jako jsou například Gipsy, MC Wohnout nebo Hugo Toxxx. Založil kapelu TroubleGang a zároveň od roku 2008 bubnoval ve skupině Chinaski. Po personálním zemětřesení ",
                     },
                     {
                         img: "bands/10_MIchalHruza.jpg",
                         alt: "Michal Hrůza & kapela Hrůzy",
                         title: "Michal Hrůza & kapela Hrůzy",
-                        link: "/kapely/michalhruza.html",
+                        link: "/kapely/michalhruza",
                         description: "Michal Hrůza je český zpěvák a zakládající člen skupiny Ready Kirken. Hudbě se začal věnovat na střední vojenské škole, kde byl členem školní hudební skupiny a kde hrál amatérské divadlo. Jeho skladba pro Anetu Langerovou Voda živá byla v letech 2005 a 2006 hitem roku",
                     },
                     {
                         img: "bands/04_Paulie Garand.jpeg",
                         alt: "Paulie Garand",
                         title: "Paulie Garand",
-                        link: "/kapely/pauliegarand.html",
+                        link: "/kapely/pauliegarand",
                         description: "Za tímto interpretem, který vystoupí v rámci pátečního programu festivalu Dozvuky léta 2023, stojí historie sahající až do roku 2006, kdy se po pár letech tvoření hudby do šuplíku poprvé zapsal do širšího povědomí demem Mozoly, které následovala éra s kapelou BPM",
                     },
                     {
                         img: "bands/01_Strasni banani.jpg",
                         alt: "Strašný Banáni",
                         title: "Strašný Banáni",
-                        link: "/kapely/strasnybanani.html",
+                        link: "/kapely/strasnybanani",
                         description: "Představujeme vám kapelu, která letos otevře náš festival. Banáni jsou opravdovým přírodním antidepresivem především co se týká podpory tvorby serotoninu, jsou mezi ovocem skutečnými favority. ",
                     },
                     {
                         img: "bands/11_TheAttics.jpg",
                         alt: "The Attics",
                         title: "The Attics",
-                        link: "/kapely/theattics.html",
+                        link: "/kapely/theattics",
                         description: "Českotřebovská rocková kapela, mající též kořeny pevně zakotvené v nedalekém Rybníku, vystoupí na Dozvucích léta již po třetí. Z původní odpolední akustické session se kluci přesunou do nočních hodin, kde, již s kompletní elektrickou výbavou, vám zahrají jejich nové skladby, a také něco málo od rockových legend typu Red Hot Chilli Peppers, Foo fighters…",
                     },
                     {
                         img: "bands/02_INST60.jpg",
                         alt: "INST60",
                         title: "INST60",
-                        link: "/kapely/inst60.html",
+                        link: "/kapely/inst60",
                         description: "Místní kapela INST60 se pohybuje někde mezi popem a rockem, soustředí se výhradně na vlastní tvorbu s texty v angličtině. Od roku 2018 hraje ve složení Bohi - klávesy a zpěv, Ivoš - baskytara, Majkl - bubny, Fána K. - kytara, Honza N. - kytara. Historie kapely sice sahá až do roku 2002",
                     },
                     {
                         img: "bands/03_Jamaron.jpg",
                         alt: "Jamaron",
                         title: "Jamaron",
-                        link: "/kapely/jamaron.html",
+                        link: "/kapely/jamaron",
                         description: "Tato česká rocková kapela v čele s charismatickou frontwoman Marií Dostálovou, jejíž výrazný hlas obklopený hutným zvukem elektrických kytar a nekompromisních bicích je dominantou této mladé pětice. Jamaron si zakládají na srozumitelných a smysluplných českých textech, se kterými se řada posluchačů snadno ztotožní",
                     },
                     {
                         img: "bands/05_Doga.jpg",
                         alt: "Doga",
                         title: "Doga",
-                        link: "/kapely/doga.html",
+                        link: "/kapely/doga",
                         description: "Při tvorbě programu Dozvuky léta 2023 jsme mysleli také na fanoušky tvrdé hudby. Doga to je energií nabušený nekompromisní 100% live rock’n’roll. Pódia válcuje kapela už 35 let, za která má na svém kontě již 11 desek, z toho dvě zlaté a jednu platinovou. Dokonce si střihla i klip v Americe. ",
                     },
                     {
                         img: "bands/06_375mnm.jpeg",
                         alt: "375 metrů nad mořem",
                         title: "375 metrů nad mořem",
-                        link: "/kapely/375mnm.html",
+                        link: "/kapely/375mnm",
                         description: "Poslední kapelou, která se představí v rámci prvního dne programu Dozvuků léta bude opět 375 metrů nad mořem. Jedná se o zábavovou, plesovou i svatební kapelu z České Třebové, ve složení Daniela Stránská, Natálie Burešová, Dominik Stránský, Tomáš Kupka a Jan Růžička. Kapela hraje covery i vlastní tvorbu.",
                     },
                     {
                         img: "bands/07_TheExcited.jpeg",
                         alt: "The Excited",
                         title: "The Excited",
-                        link: "/kapely/theexcited.html",
+                        link: "/kapely/theexcited",
                         description: "Kapela The Excited byla založena roku 2020 vysokomýtským zpěvákem a multiinstrumentalistou Adamem Čuříkem. Kapela hrající poprock s autorskými texty v českém jazyce měla svůj první koncert rok po založení, a to prostřednictvím livestreamu v místním MKlubu. ",
                     },
                     {
                         img: "bands/08_SafariExpres.jpeg",
                         alt: "Safari Expres",
                         title: "Safari Expres",
-                        link: "/kapely/safariexpres.html",
+                        link: "/kapely/safariexpres",
                         description: "Původně brněnská kapela Skákající králíčci na přelomu roku dostala nový rytmický náboj třebovské krve a proměnila se tak doslova v brněnsko-třebovský fusion – nově však pod názvem Safari Express. Studentský léta jsou pryč, ale Safari Express zůstává věrný svým kořenům inspirovaným mňágovským rockem se ságem v zádech, který Vám tentokrát bude servírovat v nádražní baště republiky – České Třebové – na Dozvucích léta! ",
                     },
                     {
                         img: "bands/09_AjBrix_AstroBoy.jpeg",
                         alt: "AJ Brix & Astro Boy",
                         title: "AJ Brix & Astro Boy",
-                        link: "/kapely/ajbrix&astroboy.html",
+                        link: "/kapely/ajbrix&astroboy",
                         description: "AJ Brix je charismatický mladý rapper, reprezentující hlas mladé generace. Velmi dobře zapadl do české rapové komunity, a to nejen oblibou u fanoušků, ale i u ostatních umělců. Mezi dosud nejúspěšnější singly AJ Brixe patří No Limit, který překonal hranici čtyř milionů streamů na Spotify (ve spolupráci s rapperem Earth) a track Nějaká doba, který se stal velmi populární u tvůrců a fanoušků na sociální síti TikTok. ",
                     },
                     {
                         img: "bands/13_HusýKrk.jpg",
                         alt: "Husý krk",
                         title: "Husý krk",
-                        link: "/kapely/husykrk.html",
+                        link: "/kapely/husykrk",
                         description: "Mladá kapela, jejíž členové pochází z údolí potoku Husí krk, si už třetím rokem hraje vlastními slovy „co chce“. Za sebou mají tito tři borci již vystoupení na PunkOff ve vodáckém tábořišti Cakle, DosiFestu ve Sloupnici, Přívratském vinobraní,  Festivalu mladých kapel v Sobkovicích a Benátské noci v Bystřeci.",
                     },
                 ]%}
@@ -202,7 +202,7 @@
                     {
                         title: "Zahájení festivalu",
                         img: "carousel-news/news1.webp",
-                        link: "/novinky/zahajeni.html",
+                        link: "/novinky/zahajeni",
                         description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, modi!"
                     },
                     {
@@ -235,7 +235,7 @@
                 <div class="text-block u-text-center">
                     <h2>Festival nabitý zážitky...</h2>
                     <h4>Mrkni na minulé ročníky!</h4>
-                    <a target="_blank" href="/galerie.html" class="btn-glitch" role="button"><span class="btn-glitch__text">Galerie</span></a>
+                    <a target="_blank" href="/galerie" class="btn-glitch" role="button"><span class="btn-glitch__text">Galerie</span></a>
                 </div>
             </div>
         </section>
