--- a/src/tpl/layout/layout.twig
+++ b/src/tpl/layout/layout.twig
@@ -88,19 +88,15 @@
 				items: [
 					{
 						title: "Kapely",
-						link: "/kapely.html"
+						link: "/kapely"
 					},
 					{
 						title: "Vstupenky",
 						link: "/#listky"
 					},
 					{
-						title: "Novinky",
-						link: "/#novinky"
-					},
-					{
 						title: "Galerie",
-						link: "/galerie.html"
+						link: "/galerie"
 					},
 					{
 						title: "Informace",
