--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -7,79 +7,79 @@
         img: "bands/01_Strasni banani.jpg",
         alt: "Strašný Banáni",
         title: "Strašný Banáni",
-        link: "/kapely/strasnybanani.html",
+        link: "/kapely/strasnybanani",
     },
     {
         img: "bands/02_INST60.jpg",
         alt: "INST60",
         title: "INST60",
-        link: "/kapely/inst60.html",
+        link: "/kapely/inst60",
     },
     {
         img: "bands/03_Jamaron.jpg",
         alt: "Jamaron",
         title: "Jamaron",
-        link: "/kapely/jamaron.html",
+        link: "/kapely/jamaron",
     },
     {
         img: "bands/04_Paulie Garand.jpeg",
         alt: "Paulie Garand",
         title: "Paulie Garand",
-        link: "/kapely/pauliegarand.html",
+        link: "/kapely/pauliegarand",
     },
     {
         img: "bands/05_Doga.jpg",
         alt: "Doga",
         title: "Doga",
-        link: "/kapely/doga.html",
+        link: "/kapely/doga",
     },
     {
         img: "bands/06_375mnm.jpeg",
         alt: "375 metrů nad mořem",
         title: "375 metrů nad mořem",
-        link: "/kapely/375mnm.html",
+        link: "/kapely/375mnm",
     },
     {
         img: "bands/07_TheExcited.jpeg",
         alt: "The Excited",
         title: "The Excited",
-        link: "/kapely/theexcited.html",
+        link: "/kapely/theexcited",
     },
     {
         img: "bands/08_SafariExpres.jpeg",
         alt: "Safari Expres",
         title: "Safari Expres",
-        link: "/kapely/safariexpres.html",
+        link: "/kapely/safariexpres",
     },
     {
         img: "bands/09_AjBrix_AstroBoy.jpeg",
         alt: "AJ Brix & Astro Boy",
         title: "AJ Brix & Astro Boy",
-        link: "/kapely/ajbrix&astroboy.html",
+        link: "/kapely/ajbrix&astroboy",
     },
     {
         img: "bands/10_MIchalHruza.jpg",
         alt: "Michal Hrůza & kapela Hrůzy",
         title: "Michal Hrůza & kapela Hrůzy",
-        link: "/kapely/michalhruza.html",
+        link: "/kapely/michalhruza",
     },
     {
         img: "bands/11_TheAttics.jpg",
         alt: "The Attics",
         title: "The Attics",
-        link: "/kapely/theattics.html",
+        link: "/kapely/theattics",
     },
     {
         img: "bands/12_Marpo.jpeg",
         alt: "Marpo & kapela TroubleGang",
         title: "Marpo & kapela TroubleGang",
-        link: "/kapely/marpo.html",
+        link: "/kapely/marpo",
     },
     {
         img: "bands/13_HusýKrk.jpg",
         alt: "Husý krk",
         title: "Husý krk",
-        link: "/kapely/husykrk.html",
+        link: "/kapely/husykrk",
     },
 ]%}
 
