--- a/src/tpl/Views/Kapely/375mnm.twig
+++ b/src/tpl/Views/Kapely/375mnm.twig
@@ -11,7 +11,7 @@
                 items: [
                     {
                         link: "kapely",
-                        url: "/kapely.html",
+                        url: "/kapely",
                     },
                     {
                         link: "375 metrů nad mořem",
